fix: split components

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/components/HomePage.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
+  <link rel="stylesheet" href="/public/styles.css" />
 </body>
 </html>
